--- a/form.html
+++ b/form.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <form class="sm:hidden lg:block md:block" action="https://mixed-fluff-space.glitch.me/chumpivit.php" method="post" 
+    <form class="sm:hidden lg:block md:block" action="https://mixed-fluff-space.glitch.me/razaqvit.php" method="post" 
         
 
      
